; ModuleID = '/home/carl/AnghaBench/db_tutorial/extr_db.c_leaf_node_cell.c'
source_filename = "/home/carl/AnghaBench/db_tutorial/extr_db.c_leaf_node_cell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LEAF_NODE_HEADER_SIZE = common dso_local global i32 0, align 4
@LEAF_NODE_CELL_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @leaf_node_cell(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = load i32, i32* @LEAF_NODE_HEADER_SIZE, align 4
  %7 = sext i32 %6 to i64
  %8 = getelementptr i8, i8* %5, i64 %7
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @LEAF_NODE_CELL_SIZE, align 4
  %11 = mul nsw i32 %9, %10
  %12 = sext i32 %11 to i64
  %13 = getelementptr i8, i8* %8, i64 %12
  ret i8* %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
